# CiWA-lang

./: .gitignore  CMakeLists.txt  CiWA-lang.cpp  CiWA-lang.h  Readme.md  WebAssembly Textual basics & code examples.md  sample-translation1.txt  sample1.cw  sample1.wat  sample2-globals.wat  sample2-locals.wat  sample2-multiple_types.cw  sample3.cw  sample3.wat  test.txt
